--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,25 @@
 .row{
-    margin: 1.3vw 0;
+    text-align: center;
+    /* margin: 1.3vw auto; */
 }
 .logo img{
     width: 100%;
-    height: 20px;
 }
 .main-menu ul li{
     display: inline-block;
 }
 ul{
-    padding: .5vw;
+    /* padding: .5vw; */
 }
-ul li a{
+.main-menu ul li a{
     font-size: 1.3vw;
     font-weight: 600;
     text-decoration: none;
     text-transform: uppercase;
     color: #454545;
-    margin: 10px;
+    display: block;
+    padding: 1vw 0;
+    margin: 1vw 1vw;
 }
 ul li:hover a{
     color: #04F06A;
