--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -1,20 +1,52 @@
-.single-course img{
-border-top-left-radius: 15px;
-border-top-right-radius: 15px;
-padding: 0 0;
- width: 100%;
+.single-course img {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  padding: 0 0;
+  width: 100%;
 }
-.country-container .single-course{
-    height: 220px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    margin-bottom: 30px;
-    /* border-radius: 5px; */
-    box-shadow: #6d5959 1px 1px 5px;
+.country-container .single-course {
+  height: 380px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  margin-bottom: 30px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  position: relative;
 }
-.course-description{
-    padding: 0 10px;
-
+.country-container .single-course:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.course-description h5 {
+  padding: 0 10px;
+  font-weight: 500;
+}
+.instructor-info {
+  display: flex;
+  background-color: #04f06a;
+}
+.instructor-photo img {
+  margin-left: 1vw;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+.instructor-name {
+  margin-left: 1vw;
+  margin-top: 1vw;
+}
+.price-duration {
+  padding: 0.3vw 0.5vw;
+}
+.single-course .btn{
+    position: absolute;
+     bottom: 1vw;
+     left: 0;
+     right: 0;
+     font-weight: 600;
+}
+.single-course .btn:hover{
+ border: 1px solid black;
+ background-color: #04f06a;
 }
