--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,10 +1,19 @@
-.cart-headding h5{
-    font-weight: 600;
-
+.cart-headding h5 {
+  font-weight: 600;
 }
-.cart-headding{
-    border-bottom: 1px solid gray;
+.cart-headding {
+  border-bottom: 1px solid gray;
 }
-.total-price{
-    border-top: 1px solid gray;
+.total-price {
+  border-top: 1px solid gray;
+}
+.btn-checkout {
+  border: none;
+  background-color: black;
+  color: #04f06a;
+}
+.btn-checkout:hover {
+  border: 1px solid black;
+  background-color: #04f06a;
+  color: black;
 }
