--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,26 +1,27 @@
-/* header{
-    border-bottom: .11px dashed #454545;
-} */
 .logo img{
-    width: 100%;
+    /* width: 100%; */
+
+    height: 100%;
 }
 .main-menu ul li{
     display: inline-block;
+    margin-top: 15px;
 }
 .main-menu ul li a{
     font-family: 'poppins';
-    font-size: 1.3vw;
+    font-size: 18px;
     font-weight: 600;
     text-decoration: none;
     text-transform: capitalize;
-    color: #454545;
+    color: black;
     display: block;
-    padding: 1vw 0;
-    margin: 1vw 1vw;
+    padding: 15px 0;
+    margin: 0 15px;
 }
 ul li:hover a{
     color: #04F06A;
 }
 .login-btn a{
-    margin: 0 .51vw;
+    padding: 8px 20px;
+    margin: 0 10px;
 }
