--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,8 +1,8 @@
 .normalBtn{
     border: 1px solid #04F06A;
-    font-size: 1.3vw;
+    font-size: 16px;
     font-weight: 600;
-    color: #454545;
+    color: black;
 }
 .normalBtn:hover{
     background: #04F06A;
@@ -12,7 +12,7 @@
     background: #04F06A;
     color: #ffffff;
     font-weight: 600;
-    font-size: 1.3vw;
+    font-size: 16px;
 }
 .filledBtn:hover{
     border: 1px solid #04F06A;
