--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
-.logo img{
-    /* width: 100%; */
-
-    height: 100%;
+.cart-count{
+    color:#04F06A;
+    display: inline;
+    font-size: 18px;
 }
 .main-menu ul li{
     display: inline-block;
