Made checkout fully responsive

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,17 +1,17 @@
-.cart-headding h5 {
+.cart-heading h5 {
   font-weight: 600;
 }
-.cart-headding{
+.cart-heading{
   border-bottom: 1px solid gray;
 }
 .total-price {
   border-top: 1px solid gray;
 }
 .btn-checkout {
-  width: 100%;
   border: none;
   background-color: black;
   color: #04f06a;
+  margin-bottom: 20px;
 }
 .btn-checkout:hover {
   border: 1px solid black;
@@ -19,16 +19,17 @@
   color: black;
 }
 .text{
-  width: 58%;
+  margin: 5px 0;
+  width: 65%;
+  padding: 5px 10px;
 }
 .text p{
-  /* line-height: 1; */
-/* padding: 0; */
-  /* font-size: 13px; */
-float: left;
+  float: left;
 }
 .price{
-  width: 42%;
+  padding: 5px 10px;
+  margin: 5px 0;
+  width: 35%;
 }
 .price p{
   float: left;
