Design of cart done

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,6 +3,7 @@
 }
 .cart-heading{
   border-bottom: 1px solid gray;
+  margin-bottom: 7px;
 }
 .total-price {
   border-top: 1px solid gray;
@@ -18,19 +19,8 @@
   background-color: #04f06a;
   color: black;
 }
-.text{
-  margin: 5px 0;
-  width: 65%;
-  padding: 5px 10px;
-}
-.text p{
-  float: left;
-}
-.price{
-  padding: 5px 10px;
-  margin: 5px 0;
-  width: 35%;
-}
-.price p{
-  float: left;
+.cart-info {
+  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
 }
