--- a/src/components/SingleCartItem/SingleCartItem.css
+++ b/src/components/SingleCartItem/SingleCartItem.css
@@ -1,24 +1,78 @@
 .single-cart-item-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin: 10px auto;
-    padding: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    margin: 7px 0;
+}
+
+.course-image {
+    flex: 0 0 80px;
+    border-radius: 7px;
+    overflow: hidden;
 }
 
 .course-image img {
-    width: 100px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 7px;
 }
 
 .image-and-title-container {
+    flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly
+    align-items: flex-start;
+    padding: 0 10px;
+}
+
+.course-title-instructor {
+    padding-left: 10px;
+}
+
+.title {
+    font-weight: bold;
 }
 
 .price-and-remove-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly
+}
+
+.price-text {
+    font-size: 14px;
+}
+
+.course-price {
+    margin-right: 15px;
+}
+
+/* // Screen smaller than 426px */
+@media screen and (max-width: 426px) {
+    .price-and-remove-container {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .course-price {
+        margin-bottom: 10px;
+    }
+
+    #remove-btn-text {
+        display: none;
+    }
+}
+
+.course-remove button {
+    border: 1px solid red;
+    border-radius: 7px;
+    background: none;
+    border: none;
+    color: #ff0000;
+    cursor: pointer;
+}
+
+.course-remove button:hover {
+    color: #cc0000;
 }
