--- a/src/components/SingleCartItem/SingleCartItem.css
+++ b/src/components/SingleCartItem/SingleCartItem.css
@@ -1,15 +1,15 @@
 .single-cart-item-container {
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 7px;
-    margin: 7px 0;
+    border-radius: 8px;
+    margin: 8px 0;
 }
 
 .course-image {
     flex: 0 0 80px;
-    border-radius: 7px;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -17,18 +17,18 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 7px;
+    border-radius: 8px;
 }
 
 .image-and-title-container {
     flex: 1;
     display: flex;
     align-items: flex-start;
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 .course-title-instructor {
-    padding-left: 10px;
+    padding-left: 8px;
 }
 
 .title {
@@ -40,15 +40,12 @@
     align-items: center;
 }
 
-.price-text {
-    font-size: 14px;
-}
 
 .course-price {
-    margin-right: 15px;
+    margin-right: 16px;
 }
 
-/* // Screen smaller than 426px */
+/* Screen smaller than 426px */
 @media screen and (max-width: 426px) {
     .price-and-remove-container {
         flex-direction: column;
@@ -56,7 +53,7 @@
     }
 
     .course-price {
-        margin-bottom: 10px;
+        margin-bottom: 8px;
     }
 
     #remove-btn-text {
@@ -66,7 +63,7 @@
 
 .course-remove button {
     border: 1px solid red;
-    border-radius: 7px;
+    border-radius: 8px;
     background: none;
     border: none;
     color: #ff0000;
