--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -27,7 +27,7 @@
 }
 .instructor-info {
   display: flex;
-  /* background-color: #04f06a; */
+  /* background-color: #FE4C55; */
 }
 .instructor-name p{
   font-weight: 600;
@@ -37,7 +37,7 @@
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  border: 1px solid black;
+  border: 1px dotted black;
 }
 .instructor-name {
   margin-left: 16px;
@@ -51,12 +51,12 @@
 .single-course .btn{
  width: 100%;
  border: none;
- background-color: black;
- color: #04f06a;
+ background-color: #FE4C55;
+ color: #FFFFFF;
  padding: 8px 0;
 }
 .single-course .btn:hover{
- border: 1px solid black;
- background-color: #04f06a;
- color: black;
+ border: 1px solid #FE4C55;
+ background-color: #FFFFFF;
+ color: #FE4C55;
 }
