--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,17 +10,17 @@ footer ul li{
 }
 footer ul li a{
     text-decoration: none;
-    color: #04F06A;
+    color: #FE4C55;
 
 }
 footer h5{
-    color: #04F06A;
+    color: #FE4C55;
 }
 footer h5 a{
-    color: #04F06A;
+    color: #FE4C55;
 }
 .copyright{
-    background-color: #04F06A;
+    background-color: #FE4C55;
     padding: 8px;
 }
 .copyright h4{
