--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -1,5 +1,5 @@
 .accordion{
---bs-accordion-active-color: #04f06a !important;
+--bs-accordion-active-color: #FE4C55 !important;
 --bs-accordion-active-bg: #ffffff;
 margin-bottom: 40px;
 margin-top: 40px;
