--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     justify-content: flex-end!important;
 }
 .cart-count{
-    color:#04F06A;
+    color:#FE4C55;
     display: inline;
 }
 .main-menu ul li{
@@ -20,7 +20,7 @@
     margin: 0 16px;
 }
 ul li:hover a{
-    color: #04F06A;
+    color: #FE4C55;
 }
 .login-btn a{
     padding: 8px 24px;
@@ -32,5 +32,5 @@ ul li:hover a{
     border-radius: 8px;
     margin: 0 10px;
     box-shadow: 0 0 0 1px #dddfe2;
-    border: 1px solid #04F06A;
+    border: 1px solid #FE4C55;
 }
