--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,3 @@
-body {
-  margin: 0;
-  font-family: 'Google Sans Text', sans-serif;
-  font-size: 18px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 3.815rem;
-}
-
-h2 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 3.052rem;
-}
-
-h3 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 2.441rem;
-}
-
-h4 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 1.953rem;
-}
-
-h5 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 1.563rem;
-}
-
-h6 {
-  font-family: 'Google Sans', sans-serif;
-  font-size: 1.25rem;
-}
-
-code {
-  font-family: 'Google Sans', sans-serif;
-}
-
-.active {
-  color: #FE4C55;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
